apply plugin: 'java'

sourceCompatibility = 8

repositories {
    jcenter()
}

dependencies {
    compile 'org.glassfish.jersey.core:jersey-client:2.27'
    compile 'org.glassfish.jersey.media:jersey-media-json-jackson:2.27'
    compile group: 'org.glassfish.jersey.inject', name: 'jersey-hk2', version: '2.27'

    compile 'javax.xml.bind:jaxb-api:2.3.0'
    compile 'javax.activation:activation:1.1.1'

    compile 'junit:junit:4.12'
    compile 'org.hamcrest:hamcrest-all:1.3'
}

task runTest(type: JavaExec) {
    main = 'util.Runner'

    classpath = sourceSets.test.runtimeClasspath
}
